--- a/register.html
+++ b/register.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./styles/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -12,7 +13,7 @@
     <main>
         <div>
             <form action="#">
-                <p>Register Form</p>
+                <p class="register-header">Register Form</p>
 
                 <input placeholder="Pet Name" type="text" id="txtName">
                 <input placeholder="Age" type="text" id="txtAge">
@@ -22,7 +23,19 @@
             <button onclick="register">Register</button>
         </div>
     </main>
+
+    <div class="container">
+        <h2>Registered pets</h2>
+        <table class="table">
+            <thead>
+                <tr></tr>
+            </thead>
+
+        </table>
+
+    </div>
     <script src="./scripts/register.js"></script>
+    <script src="./scripts/disply.js"></script>
 </body>
 </html>
 
