--- a/register.html
+++ b/register.html
@@ -2,40 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/main.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=kalnia+Glaze:wght@100..700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&family=Wittgenstein:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <title>Register</title>
 </head>
-<body>
-    <header>
-
+<body class="body-color">
+    <header class="site-header">
+        <div class="container">
+            <h1>Register</h1>
+            <div>
+                <nav>
+                    <a href="index.html">Home</a></li>
+                    <a href="services.html">Services</a></li>
+                    <a href="register.html">Register</a></li>
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
-        <div>
+        <div class="container">
             <form action="#">
-                <p class="register-header">Register Form</p>
+                <p>Register Form</p>
 
-                <input placeholder="Pet Name" type="text" id="txtName">
-                <input placeholder="Age" type="text" id="txtAge">
-                <input placeholder="Gender" type="text" id="txtGender">
-                <input placeholder="Breed" type="text" id="txtBreed">
+                <input class="form-control" placeholder="Pet Name" type="text" id="txtName">
+                <input class="form-control" placeholder="Age" type="text" id="txtAge">
+                <input class="form-control" placeholder="Gender" type="text" id="txtGender">
+                <input class="form-control" placeholder="Breed" type="text" id="txtBreed">
             </form>
-            <button onclick="register">Register</button>
+            <button class="btn btn-primary" onclick="register()">Register</button>
         </div>
-    </main>
+    </main> 
 
-    <div class="container">
-        <h2>Registered pets</h2>
-        <table class="table">
-            <thead>
-                <tr></tr>
-            </thead>
-
-        </table>
-
-    </div>
+        <div class="container">
+            <h2>Register Pets <sup id="totalPet">00</sup></h2>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Age</th>
+                        <th scope="col">Gender</th>
+                        <th scope="col">Breed</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="pets">
+                    
+                </tbody>
+            </table>
+        </div>
+       
     <script src="./scripts/register.js"></script>
-    <script src="./scripts/disply.js"></script>
+    <script src="./scripts/display.js"></script>
 </body>
 </html>
 
